[package]
name = "dfdx-mamba"
version = "0.0.1"
edition = "2021"

[features]
default = ["nightly"]
nightly = ["dfdx/nightly"]
safetensors = ["dfdx/safetensors"]

[dependencies.dfdx]
git = 'https://github.com/swfsql/dfdx.git'
# branch = this-main
rev = "c4a2995"
default-features = false
features = ["safetensors", "nightly"]
